# rocketchat-client-rs

./: .travis.yml  Cargo.toml  Makefile  README.md  azure-pipelines-template.yml  rustfmt.toml
ci/: azure-pipelines.yml
examples/: simple.rs
src/: bin.rs  client.rs  lib.rs
