[package]
name = "rocketchat_client_rs"
version = "0.2.0"
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
description = "Send messages to rocketchat via cli or using library"
homepage = "https://github.com/sharkdp/fd"
repository = "https://github.com/ansrivas/rocketchat-client-rs"
readme = "README.md"
keywords = [
    "rocketchat",
    "command-line",
    "tool",
]
license = "MIT"
categories = ["command-line-utilities"]
edition="2018"

[lib]
name = "rocketchat_client_rs"
path = "src/lib.rs"

[[bin]]
name = "rocketchat-client"
path = "src/bin.rs"


[dependencies]
structopt = "0.2"
hostname = "0.1.5"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.2"
env_logger = "^0.5.0"
reqwest = "0.9.17"
serde_json = "1.0.39"
serde = "1.0.91"

[dev-dependencies]
