[package]
name = "rocketchat_client_rs"
version = "0.2.2"
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
description = "Send messages to rocketchat via cli or using library"
homepage = "https://github.com/ansrivas/rocketchat-client-rs"
documentation = "https://docs.rs/rocketchat_client_rs"
repository = "https://github.com/ansrivas/rocketchat-client-rs"
readme = "README.md"
keywords = [
    "rocketchat",
    "command-line",
    "tool",
]
license = "MIT"
categories = ["command-line-utilities"]
edition="2018"

[lib]
name = "rocketchat_client_rs"
path = "src/lib.rs"

[[bin]]
name = "rocketchat-client"
path = "src/bin.rs"


[dependencies]
structopt = "0.2.18"
hostname = "0.1.5"
openssl = { version = "0.10.24", features = ["vendored"] }
openssl-probe = "0.1.2"
env_logger = "0.6.2"
reqwest = "0.9.19"
serde_json = "1.0.40"
serde = "1.0.99"

[dev-dependencies]
