[package]
name = "rocketchat_client_rs"
version = "0.2.2"
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
description = "Send messages to rocketchat via cli or using library"
homepage = "https://github.com/ansrivas/rocketchat-client-rs"
documentation = "https://docs.rs/rocketchat_client_rs"
repository = "https://github.com/ansrivas/rocketchat-client-rs"
readme = "README.md"
keywords = [
    "rocketchat",
    "command-line",
    "tool",
]
license = "MIT"
categories = ["command-line-utilities"]
edition="2018"

[lib]
name = "rocketchat_client_rs"
path = "src/lib.rs"

[[bin]]
name = "rocketchat-client"
path = "src/bin.rs"


[dependencies]
structopt = "0.3.1"
hostname = "0.3.1"
openssl = { version = "0.10.32", features = ["vendored"] }
openssl-probe = "0.1.2"
env_logger = "0.11.1"
reqwest = {version = "0.11.1", features = ["json"]}
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1.2", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
